--- a/Rubbens.html
+++ b/Rubbens.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BOISGUENE RUBBENS</title>
+    <title>ysd</title>
 </head>
 <body>
 
